refactor(Event): misc EventService changes